@@ -4,7 +4,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>async-log-test</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>async-log-test</name>
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>async-log-client</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.3-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -62,7 +62,6 @@
                     <target>21</target>
                     <encoding>UTF-8</encoding>
                     <compilerArgs>
-                        <arg>-proc:full</arg>
                         <arg>-Xlint:all</arg>
                         <arg>-verbose</arg>
                         <arg>-XprintRounds</arg>
@@ -71,6 +70,7 @@
                         <arg>10000</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
+
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
@@ -80,7 +80,7 @@
                         <path>
                             <groupId>org.example</groupId>
                             <artifactId>async-log-client</artifactId>
-                            <version>1.0-SNAPSHOT</version>
+                            <version>1.3-SNAPSHOT</version>
                         </path>
 
                     </annotationProcessorPaths>
